# cozy-kit-plugins

./: .gitignore  pyproject.toml
cozy_kit/: __init__.py  cli.py  data.py  details.py  greeting.py  mailer.py  text_studio.py  timer.py  ui.py
cozy_kit/_internal/: _trusted.py  cli_doctor.py  json_manager.py
cozy_kit/_internal/errors/: inheritance_errors.py  main_errors.py  plugin_errors.py
cozy_kit/_internal/helpers/: dep_helpers.py  greeting_helpers.py  import_helpers.py  plugin_lifecycle.py  smtp_helpers.py  text_helpers.py  time_helpers.py
cozy_kit/_internal/models/: __init__.py  context.py  manifest.py
cozy_kit/plugins/: README.md  __init__.py  cli.py  plugin-schema.json
cozy_kit/plugins/core/: _builtins.py  installer.py  marketplace.py  publisher.py  registry.py  stubgen.py  validator.py
cozy_kit/plugins/models/: __init__.py  context.py  manifest.py
cozy_kit/plugins/utils/: dep_utils.py  import_utils.py  lifecycle.py
cozy_kit/resources/: afternoons.json  bedtime_stories.json  evenings.json  fun_facts.json  holidays.json  mornings.json  motivations.json
tests/: test_builtin_official.py
